# my-reboot

./: .editorconfig  .eslintrc.json  .gitignore  Cargo.toml  DOC.md  GRUB-CONFIGURATION.md  LICENSE  README.md  basic.html  build.rs  build.sbt  install.ps1  install.sh  justfile  main.js  package-lock.json  package.json  pre-commit.sh  tsconfig.json
display-profile/: Cargo.toml
display-profile/cli/: Cargo.toml
display-profile/cli/src/: args.rs  main.rs
display-profile/data/: filter-active.jq
display-profile/data/AOC+Dell-cloned/: dump.json
display-profile/data/AOC+Dell-extended/: dump.json
display-profile/data/AOC-only/: dump.json
display-profile/data/Dell-only/: dump.json
display-profile/data/clone-squared/: README.md
display-profile/data/clone-squared/1-pre/: dump-DisplayConfigGetDeviceInfo-GET_SOURCE_NAME-0-67034-0.json  dump-DisplayConfigGetDeviceInfo-GET_SOURCE_NAME-0-71829-0.json  dump-QueryDisplayConfig-ALL_PATHS.json  dump-SetDisplayConfig-APPLY-aggregated.json  dump-SetDisplayConfig-APPLY.json
display-profile/data/clone-squared/2-apply/: dump-DisplayConfigGetDeviceInfo-GET_TARGET_NAME-0-71829-198147.json  dump-QueryDisplayConfig-ONLY_ACTIVE_PATHS-aggregated.json  dump-QueryDisplayConfig-ONLY_ACTIVE_PATHS.json  dump-SetDisplayConfig-APPLY-aggregated.json  dump-SetDisplayConfig-APPLY.json
display-profile/data/clone-squared/3-revert/: dump-DisplayConfigGetDeviceInfo-GET_TARGET_NAME-0-67034-4353.json  dump-QueryDisplayConfig-ALL_PATHS.json  dump-SetDisplayConfig-APPLY-aggregated.json  dump-SetDisplayConfig-APPLY.json
display-profile/data/profiles/AOC+Dell-cloned/: dump-aggregated.json  profile.json
display-profile/data/profiles/AOC+Dell-cloned-squared/: dump-aggregated.json  profile.json
display-profile/data/profiles/AOC+Dell-extended/: dump-aggregated.json  profile.json
display-profile/data/profiles/AOC-only/: dump-aggregated.json  profile.json
display-profile/data/profiles/Dell+AOC-extended/: dump-aggregated.json  dump.json  profile.json
display-profile/data/profiles/Dell-only/: dump-aggregated.json  profile.json
display-profile/experiment/: Cargo.toml
display-profile/experiment/src/: get_device_info.rs
display-profile/experiment/src/win_api/: types.rs
display-profile/experiment/src/win_api/functions/: win32_error.rs
display-profile/lib/: Cargo.toml
display-profile/lib/src/: device_id.rs  dump.rs  error.rs  get_profile.rs  lib.rs  set_profile.rs  util.rs  win_api.rs
display-profile/lib/src/win_api/: win32_error.rs
display-profile/src/: common.rs  get_device_info.rs  lib.rs  output_format.rs
display-profile/src/win_api/: functions.rs  types.rs
display-profile/src/win_api/functions/: win32_error.rs
display-profile/src/win_api/types/: device_id.rs  flags.rs  hex_formatted_bits.rs  lower_hex.rs  validated.rs
enum_display_devices/: Cargo.toml  README.md
enum_display_devices/src/: enum_display_devices.rs  lib.rs  main.rs
get_active_display_device_id/: EnumDisplayDevices.cc  Makefile  get_active_display_device_id.cc
is_windows_11_or_greater/: Cargo.toml
is_windows_11_or_greater/src/: lib.rs  main.rs
linux/src/main/scala/myreboot/: Platform.scala
linux/src/main/scala/myreboot/main/: Dialog.scala  Options.scala  Reboot.scala  Setup.scala
my_reboot/: Cargo.toml  build.rs
my_reboot/src/: args.rs  configs.rs  dialog.rs  file_content_as_hash_map.rs  file_content_as_map.rs  grubenv.rs  host_os.rs  main.rs  options.rs  options_types.rs  properties.rs  script.rs  state.rs  text.rs
my_reboot/src/args/: errors.rs  script_args.rs
my_reboot/src/dialog/: advanced.rs  basic.rs
my_reboot/src/host_os/: linux.rs  windows.rs
my_reboot/src/host_os/windows/: configuration.rs
project/: Logging.scala  OS.scala
reboot-to-linux/: .gitignore  Makefile  main.c
reboot-to-windows/: .gitignore  Makefile  main.c  reboot-to-windows.desktop.template
scripts/: CreateDisplaySwitchShortcut.vbs  CreateMyRebootShortcut.vbs  CreateProfileSwitchShortcut.vbs  linux-install.bash  windows-install.bash
shared/src/main/scala/myreboot/: Action.scala  BootOptions.scala  Configs.scala  Display.scala  Grubenv.scala  Icon.scala  LinuxPlatform.scala  OS.scala  OSPlatform.scala  PropertiesFile.scala  WindowsPlatform.scala  WithCode.scala
shared/src/main/scala/myreboot/main/: ArgsProgram.scala  Dialog.scala  DialogBase.scala  OptionsBase.scala  RebootBase.scala  (+2 more)
shared/src/test/scala/myreboot/: GrubenvSpec.scala
src/: advanced-dialog-preload.ts  advanced-dialog.ts  args.rs  basic-dialog-preload.ts  basic-dialog.ts  configs.ts  configuration.rs  configure.ts  dialog-preload.ts  dialog.rs  dialog.ts  grubenv.ts  host_os.rs  linux-provider.ts  main.rs  main.ts  messages.ts  options_types.rs  os-provider.ts  properties.ts  script.rs  script.ts  state.rs  state.ts  style.css  text.rs  win32-provider.ts
src-enum_display_devices/: Cargo.toml
src-enum_display_devices/src/: enum_display_devices.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: args.rs  configs.rs  enum_display_devices.rs  file_content_as_hash_map.rs  grubenv.rs  host_os.rs  main.rs  options_types.rs  properties.rs  script.rs  state.rs  text.rs
src-tauri/src/args/: script_args.rs
src-tauri/src/host_os/: linux.rs  windows.rs
src-tauri/src/host_os/windows/: enum_display_devices.rs  get_active_display_id.rs
src/args/: errors.rs  script_args.rs
src/dialog/: advanced.rs  basic.rs
src/host_os/: linux.rs  windows.rs
src/host_os/linux/: configuration.rs
src/host_os/windows/: configuration.rs
src/main/cpp/: query-display.cpp
src/main/scala/myreboot/: BootOptions.scala  Configs.scala  Display.scala  Grubenv.scala  LinuxPlatform.scala  OS.scala  Platform.scala  PropertiesFile.scala  WindowsPlatform.scala
src/main/scala/myreboot/main/: Dialog.scala  EnumDisplayDevices.scala  Linux.scala  Setup.scala
src/main/scala/windowsapi/scala/: User32.scala
src/persist/: configs.rs
src/test/scala/myreboot/: GrubenvSpec.scala
windows-display-config/: Cargo.toml
windows-display-config/src/: lib.rs
windows/src/main/scala/myreboot/: Platform.scala
(+15 files in other folders)
