[workspace]
members = [
    "my_reboot",
    "enum_display_devices",
    "is_windows_11_or_greater",
    "display-profile/lib",
    "display-profile/cli",
    "windows-display-config",
]
default-members = ["my_reboot"]
resolver = "3"

[workspace.dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
enum_display_devices.path = "enum_display_devices"
display-profile-lib.path = "display-profile/lib"
iced = "0.14.0"
is_windows_11_or_greater.path = "is_windows_11_or_greater"
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
windows = "0.62.2"
windows-display-config.path = "windows-display-config"
windows-sys = "0.52.0"
winres = "0.1"

[workspace.lints.clippy]
pedantic = "warn"
