[workspace]
members = [
    "my_reboot",
    "display-profile/lib",
    "display-profile/cli",
    "windows-display-config",
    "windows-ccd-example",
]
default-members = ["my_reboot"]
resolver = "3"

[workspace.dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
display-profile-lib.path = "display-profile/lib"
iced = "0.14.0"
open = "5"
regex = "1.10.2"
rustyline = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "1.1.2"
windows = "0.62.2"
windows-display-config.path = "windows-display-config"
windows-sys = "0.52.0"
winres = "0.1"

[workspace.lints.clippy]
pedantic = "warn"
