[package]
name = "my-reboot"
version = "3.0.0"
description = "An application to manage switching between Windows and Linux, and switching between TV and monitor on Windows"
authors = ["Eduardo R. D'Avila <erdavila@gmail.com>"]
license = "MIT"
repository = "https://github.com/erdavila/my-reboot"
edition = "2024"

[package.metadata.winres]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
iced = { version = "0.14.0", features = [ "image" ] }
rustyline = "18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "1.1.2"

[target."cfg(not(windows))".dependencies]
regex = "1.10.2"

[target."cfg(windows)".dependencies]
display-profile-lib = { version = "0.1.1", features = [ "serde" ] }
open = "5"
windows = { version = "0.62.2", features = [ "Win32_System_Console", "Win32_UI_WindowsAndMessaging" ] }

[build-dependencies]
anyhow = "1.0"
build-rs = "0.3"
chrono = "0.4"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[lints.clippy]
pedantic = "warn"
