[package]
name = "display-profile"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62.2", features = [
  "Wdk_Graphics_Direct3D",
  "Win32_Devices_Display",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
] }

[lints]
workspace = true
