[package]
name = "enum_display_devices"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
]

[lints]
workspace = true
