[package]
name = "is_windows_11_or_greater"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { workspace = true, features = [
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
] }

[lints]
workspace = true
