[package]
name = "my-reboot"
version = "3.0.0"
description = "An application to manage switching between Windows and Linux, and switching between TV and monitor on Windows"
authors = ["Eduardo R. D'Avila <erdavila@gmail.com>"]
license = ""
repository = ""
edition = "2024"

[package.metadata.winres]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term.workspace = true
anyhow.workspace = true
iced = { workspace = true, features = [ "image" ] }
serde_json.workspace = true

[target."cfg(not(windows))".dependencies]
regex.workspace = true

[target."cfg(windows)".dependencies]
display-profile-lib = { workspace = true, features = [ "serde" ]}
enum_display_devices.workspace = true
is_windows_11_or_greater.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres.workspace = true

[lints]
workspace = true
