[package]
name = "windows-display-config"
version = "0.1.0"
edition = "2024"

[features]
dump = [ "dep:serde_json", "windows/Wdk_Graphics_Direct3D" ]

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
windows = { version = "0.62.2", features = [
  "Win32_Devices_Display",
  "Win32_Graphics_Gdi",
] }

[lints]
workspace = true
