[package]
name = "display-profile-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
windows = { version = "0.62.2", features = [
  "Wdk_Graphics_Direct3D",
  "Win32_Devices_Display",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
] }

[lints]
workspace = true
