[package]
name = "display-profile-lib"
version = "0.1.0"
edition = "2024"

[features]
dump = [ "windows-display-config/dump" ]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
windows-display-config = { path = "../../windows-display-config" }

[lints]
workspace = true
